--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,12 @@
             <version>4.11</version>
         </dependency>
 
+        <!--<dependency>
+            <groupId>fr.inria.gforge.spoon</groupId>
+            <artifactId>spoon-core</artifactId>
+            <version>5.5.0-SNAPSHOT</version>
+        </dependency>-->
+
     </dependencies>
 
     <build>
