--- a/src/main/resources/javapoet.properties
+++ b/src/main/resources/javapoet.properties
@@ -6,7 +6,7 @@ testSrc=src/test/java/
 maven.home=/usr/share/maven/
 maven.localRepository=/home/bdanglot/.m2/repository/
 
-result=target/javapoet
+outputDirectory=dspot-out/javapoet
 javaVersion=8
 filter=com.squareup.javapoet
 
