--- a/pom.xml
+++ b/pom.xml
@@ -27,38 +27,16 @@
             <version>4.11</version>
         </dependency>
 
-        <!--<dependency>
-            <groupId>fr.inria.gforge.spoon</groupId>
-            <artifactId>spoon-core</artifactId>
-            <version>5.5.0-SNAPSHOT</version>
-        </dependency>-->
+        <dependency>
+            <groupId>com.martiansoftware</groupId>
+            <artifactId>jsap</artifactId>
+            <version>2.1</version>
+        </dependency>
 
     </dependencies>
 
     <build>
         <plugins>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>java</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <executable>java</executable>
-                    <arguments>
-                        <argument></argument>
-                        <argument>-Xmx=8G</argument>
-                        <argument>-Xms=4G</argument>
-                        <argument>-classpath</argument>
-                        <classpath/>
-                        <argument>Main</argument>
-                    </arguments>
-                </configuration>
-            </plugin>
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
