--- a/src/main/resources/jsoup.properties
+++ b/src/main/resources/jsoup.properties
@@ -1,4 +1,4 @@
-project=dataset/joda-time
+project=dataset/jsoup
 
 src=src/main/java/
 testSrc=src/test/java/
@@ -6,7 +6,7 @@ testSrc=src/test/java/
 maven.home=/usr/share/maven/
 maven.localRepository=/home/bdanglot/.m2/repository
 
-outputDirectory=results/joda-time/
+outputDirectory=results/jsoup/
 javaVersion=8
-filter=org.joda.time
+filter=org.jsoup
 
