--- a/src/main/resources/joda-time.properties
+++ b/src/main/resources/joda-time.properties
@@ -1,4 +1,4 @@
-project=dataset/http-request/lib
+project=dataset/joda-time
 
 src=src/main/java/
 testSrc=src/test/java/
@@ -6,7 +6,7 @@ testSrc=src/test/java/
 maven.home=/usr/share/maven/
 maven.localRepository=/home/bdanglot/.m2/repository
 
-outputDirectory=results/http-request/
-javaVersion=5
-filter=com.github.kevinsawicki.http
+outputDirectory=results/joda-time/
+javaVersion=8
+filter=org.joda.time
 
