--- a/src/main/resources/javapoet.properties
+++ b/src/main/resources/javapoet.properties
@@ -5,4 +5,4 @@ testSrc=src/test/java/
 
 outputDirectory=results/javapoet
 javaVersion=8
-filter=com.squareup.javapoet
+filter=com.squareup.javapoet.*
