add first results mustachejava

--- a/src/main/resources/mustachejava.properties
+++ b/src/main/resources/mustachejava.properties
@@ -2,6 +2,7 @@ project=dataset/mustache.java/compiler
 
 src=src/main/java/
 testSrc=src/test/java/
+testResources=src/test/resources/
 
 outputDirectory=results/mustachejava
 javaVersion=8
