add results retrofit

--- a/src/main/resources/mybatis.properties
+++ b/src/main/resources/mybatis.properties
@@ -2,7 +2,10 @@ project=dataset/mybatis
 
 src=src/main/java/
 testSrc=src/test/java/
+srcResources=src/main/resources/
+testResources=src/test/resources/
 
 outputDirectory=results/mybatis
 javaVersion=8
 filter=org.apache.ibatis.*
+excludedClasses=org.apache.ibatis.logging.LogFactoryTest,org.apache.ibatis.cache.SoftCacheTest
