add script extract table

--- a/src/main/resources/twilio-java.properties
+++ b/src/main/resources/twilio-java.properties
@@ -6,4 +6,4 @@ testSrc=src/test/java/
 outputDirectory=results/twilio-java
 javaVersion=8
 filter=com.twilio.*
-excludedClasses=com.twilio.http.NetworkHttpClientTest
+excludedClasses=com.twilio.http.NetworkHttpClientTest,com.twilio.TwilioTest
