--- a/src/main/resources/cygnus-common.properties
+++ b/src/main/resources/cygnus-common.properties
@@ -1,4 +1,4 @@
-project=dataset/usecase-fiware-cygnus/Cygnus/cygnus-common
+project=dataset/cygnus/Cygnus/cygnus-common
 
 src=src/main/java/
 testSrc=src/test/java/
@@ -9,3 +9,4 @@ filter=com.telefonica.iot.cygnus*
 
 srcResources=src/main/resources/
 testResources=src/test/resources/
+excludedClasses=com.telefonica.iot.cygnus.manage.*,com.telefonica.iot.cygnus.metrics.*
