update logback properties with resources

--- a/src/main/resources/logback.properties
+++ b/src/main/resources/logback.properties
@@ -3,7 +3,7 @@ project=dataset/logback/logback-core
 src=src/main/java/
 testSrc=src/test/java/
 srcResources=src/main/resources/
-testResources=src/test/resources/
+testResources=src/test/resources/:src/test/input/
 
 outputDirectory=results/logback
 javaVersion=8
