remover working, add a script to run evosuite

--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,18 @@
             <version>2.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.evosuite</groupId>
+            <artifactId>evosuite-master</artifactId>
+            <version>1.0.5-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.evosuite</groupId>
+            <artifactId>evosuite-runtime</artifactId>
+            <version>1.0.5-SNAPSHOT</version>
+        </dependency>
+
     </dependencies>
 
     <build>
