--- a/src/main/resources/stream-lib.properties
+++ b/src/main/resources/stream-lib.properties
@@ -1,7 +1,7 @@
 project=dataset/stream-lib
 
 src=src/main/java
-testSrc=src/test/java
+testSrc=src/test/java/
 
 outputDirectory=results/stream-lib
 javaVersion=8
