add results twilio

--- a/src/main/resources/mybatis.properties
+++ b/src/main/resources/mybatis.properties
@@ -2,8 +2,7 @@ project=dataset/mybatis
 
 src=src/main/java/
 testSrc=src/test/java/
-srcResources=src/main/resources/
-testResources=src/test/resources/
+testResources=src/test/java/resources/nodelet_test.xml
 
 outputDirectory=results/mybatis
 javaVersion=8
