fix scripts and resources

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ install:
   - export MAVEN_HOME=/usr/local/maven-3.5.0
 
 script:
+  - echo "dspot-experiments"
   #- ./src/main/bash/run-mutant-original.sh
   #- ./src/main/bash/amplification.sh
   #- ./src/main/bash/run-mutant-amplified.sh
