update mybatis properties

--- a/src/main/resources/mybatis.properties
+++ b/src/main/resources/mybatis.properties
@@ -2,7 +2,8 @@ project=dataset/mybatis
 
 src=src/main/java/
 testSrc=src/test/java/
-testResources=src/test/java/resources/nodelet_test.xml
+srcResources=src/main/java/
+testResources=src/test/java/
 
 outputDirectory=results/mybatis
 javaVersion=8
