--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,15 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>fr.inria.diversify</groupId>
+    <groupId>fr.inria.stamp</groupId>
     <artifactId>dspot-experiment</artifactId>
     <version>1.0.0</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <default.encoding>UTF-8</default.encoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
     <repositories>
@@ -38,15 +40,9 @@
     <dependencies>
 
         <dependency>
-            <groupId>fr.inria.diversify</groupId>
+            <groupId>fr.inria.stamp</groupId>
             <artifactId>dspot</artifactId>
             <version>1.0.0</version>
-        </dependency>
-
-        <dependency>
-            <groupId>fr.inria.gforge.spoon</groupId>
-            <artifactId>spoon-core</artifactId>
-            <version>6.0.0-SNAPSHOT</version>
         </dependency>
 
         <dependency>
