--- a/src/main/resources/jsoup.properties
+++ b/src/main/resources/jsoup.properties
@@ -3,7 +3,7 @@ project=dataset/jsoup
 src=src/main/java/
 testSrc=src/test/java/
 
-srcResources=src/main/java/org/jsoup/nodes/entities-base.properties:src/main/java/org/jsoup/nodes/entities-full.properties:src/main/java/org/jsoup/nodes/entities-xhtml.properties
+srcResources=src/main/java/
 testResources=src/test/resources/
 
 outputDirectory=results/jsoup
