--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
         <dependency>
             <groupId>fr.inria.stamp</groupId>
             <artifactId>dspot</artifactId>
-            <version>1.0.0</version>
+            <version>1.0.6-SNAPSHOT</version>
         </dependency>
 
         <dependency>
