force pit version to 1.2.0 in properties files

--- a/src/main/resources/mustache.java.properties
+++ b/src/main/resources/mustache.java.properties
@@ -9,3 +9,4 @@ javaVersion=8
 filter=com.github.mustachejava.*
 additionalClasspathElements=src/test/resources/templates.jar
 excludedClasses=com.github.mustachejava.InterpreterTest
+pitVersion=1.2.0
