--- a/src/main/resources/mybatis.properties
+++ b/src/main/resources/mybatis.properties
@@ -9,3 +9,4 @@ outputDirectory=results/mybatis
 javaVersion=8
 filter=org.apache.ibatis.*
 excludedClasses=org.apache.ibatis.logging.LogFactoryTest,org.apache.ibatis.cache.SoftCacheTest
+pitVersion=1.2.0
