--- a/src/main/resources/protostuff.properties
+++ b/src/main/resources/protostuff.properties
@@ -7,3 +7,4 @@ outputDirectory=results/protostuff
 javaVersion=8
 filter=io.protostuff*
 #additionalClasspathElements=src/main/resources/org/biojava/nbio/core/sequence/iupac.txt
+pitVersion=1.2.0
