--- a/src/main/resources/twilio-java.properties
+++ b/src/main/resources/twilio-java.properties
@@ -7,3 +7,4 @@ outputDirectory=results/twilio-java
 javaVersion=8
 filter=com.twilio.*
 excludedClasses=com.twilio.http.NetworkHttpClientTest,com.twilio.TwilioTest
+pitVersion=1.2.0
