--- a/src/main/resources/logback.properties
+++ b/src/main/resources/logback.properties
@@ -7,3 +7,5 @@ testResources=src/test/resources/:src/test/input/
 outputDirectory=results/logback
 javaVersion=6
 filter=ch.qos.logback.core.*
+
+pitVersion=1.2.0
