add amplify script

--- a/src/main/resources/mustache.java.properties
+++ b/src/main/resources/mustache.java.properties
@@ -1,4 +1,5 @@
-project=dataset/mustache.java/compiler
+project=dataset/mustache.java
+targetModule=compiler
 
 src=src/main/java/
 testSrc=src/test/java/
