--- a/src/main/resources/protostuff.properties
+++ b/src/main/resources/protostuff.properties
@@ -1,10 +1,11 @@
-project=dataset/protostuff
+#project=dataset/protostuff
+project=/home/bdanglot/workspace/dspot-experiments/dataset/protostuff/
 targetModule=protostuff-core
 
 src=src/main/java/
 testSrc=src/test/java/
 
-outputDirectory=results/protostuff
+
 javaVersion=8
 filter=io.protostuff*
 #additionalClasspathElements=src/main/resources/org/biojava/nbio/core/sequence/iupac.txt
